GUI: Prevent overflow in gui-tabs header

--- a/src/client/stylesheets/gui.css
+++ b/src/client/stylesheets/gui.css
@@ -521,6 +521,7 @@ gui-tabs {
   display : block;
   position : relative;
   box-sizing : border-box;
+  overflow : hidden;
 }
   gui-tabs > ul {
     display : block;
