--- a/src/client/stylesheets/theme.less
+++ b/src/client/stylesheets/theme.less
@@ -699,7 +699,7 @@ gui-expander {
         border-bottom : 1px solid @base_background_color;
       }
   gui-tabs > gui-tab-container {
-    height : ~"calc(100% - 25px)";
+    height : ~"calc(100% - 2.08333em)";
     border : 1px solid @gui_border_color;
     padding : @gui_base_padding;
   }
